# Jenkins-Sentinel

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  alembic.ini  analyzer  dbmanage.py  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 24d507e55555_initial_migration.py
app/: cli.py  main.py
app/core/: config.py  logging.py
app/models/: build.py  database.py
app/services/: agent_manager.py  bedrock_client.py  build_analyzer.py  database.py  jenkins_client.py
app/utils/: log_analyzer.py
docs/: INTEGRATION.md  PRD.md  jenkins-mockup.html
examples/: Jenkinsfile
jenkins-plugin/: README.md
jenkins-plugin/src/main/java/io/jenkins/plugins/buildanalyzer/: BuildAnalyzerGlobalConfig.java  BuildAnalyzerNotifier.java
jenkins-plugin/src/main/resources/io/jenkins/plugins/buildanalyzer/BuildAnalyzerGlobalConfig/: config.jelly
k8s/: config.yaml  deployment.yaml  network-policy.yaml  service.yaml
scripts/: check_all.sh
